added new files to VC project
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@883 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -364,6 +364,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\Maintenance.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Maintenance.cpp"
+			>
+		</File>
+		<File
 			RelativePath=".\MessageBase.h"
 			>
 		</File>
