--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1152,12 +1152,11 @@ ParRepair=yes
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
-# Force par-rename (yes, no).
+# Check for renamed files (yes, no).
 #
 # Par-rename restores original file names using information stored
 # in par2-files. When enabled the par-rename is performed as a first
-# step of post-processing for every nzb-file having par2-files. When
-# disabled the par-rename is performed only if requested by unpacker.
+# step of post-processing for every nzb-file having par2-files.
 #
 # Par-rename is very fast and is highly recommended, especially if
 # unpack is disabled.
