option "InterDir" is now active by default
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@888 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -46,7 +46,7 @@ DestDir=${MainDir}/dst
 #
 # NOTE: If the option <InterDir> is set to empty value the downloaded
 # files are put directly to destination directory (option <DestDir>).
-InterDir=
+InterDir=${MainDir}/inter
 
 # Directory for incoming nzb-files.
 #
