small restructure in settings order: 1) combined sections "REMOTE CONTROL" and "PERMISSIONS" into one section with name "SECURITY"; 2) moved sections "CATEGORIES" and "RSS FEEDS" higher in the section list
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@896 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -219,7 +219,7 @@ Server1.Connections=4
 
 
 ##############################################################################
-### REMOTE CONTROL                                                         ###
+### SECURITY                                                               ###
 
 # IP on which NZBGet server listen and which clients use to contact NZBGet.
 #
@@ -287,9 +287,6 @@ SecureKey=
 # web-server because all requests will have the address of this server.
 AuthorizedIP=
 
-##############################################################################
-### PERMISSIONS                                                            ###
-
 # User name for daemon-mode, POSIX only.
 #
 # Set the user that the daemon normally runs at (POSIX in daemon-mode only).
@@ -310,6 +307,228 @@ DaemonUsername=root
 # Empty value or value "1000" disable the setting of umask-mode; current
 # umask-mode (set via shell) is used in this case.
 UMask=1000
+
+
+##############################################################################
+### CATEGORIES                                                             ###
+
+# This section defines categories available in web-interface.
+
+# Category name.
+#
+# Each nzb-file can be assigned to a category.
+# Category name is passed to post-processing script and can be used by it
+# to perform category specific processing.
+Category1.Name=Movies
+
+# Destination directory for this category.
+#
+# If this option is empty, then the default destination directory
+# (option <DestDir>) is used. In this case if the option <AppendCategoryDir>
+# is active, the program creates a subdirectory with category name within
+# destination directory.
+Category1.DestDir=
+
+# Unpack downloaded nzb-files (yes, no).
+#
+# For more information see global option <Unpack>.
+Category1.Unpack=yes
+
+# Default list of post-processing scripts.
+#
+# For more information see global option <DefScript>.
+Category1.DefScript=
+
+# List of aliases.
+#
+# When a nzb-file is added from URL, RSS or RPC the category name
+# is usually supplied by nzb-site or by application accessing
+# NZBGet. Using Aliases you can match their categories with your owns.
+#
+# Separate aliases with commas or semicolons. Use wildcard-characters
+# * and ? for pattern matching.
+#
+# Example: TV - HD, TV - SD, TV*
+Category1.Aliases=
+
+Category2.Name=Series
+Category3.Name=Music
+Category4.Name=Software
+
+
+##############################################################################
+### RSS FEEDS                                                              ###
+
+# Name of RSS Feed.
+#
+# The name is used in UI and for logging. It can be any string.
+#Feed1.Name=my feed
+
+# Address (URL) of RSS Feed.
+#
+# Example: https://myindexer.com/api?apikey=3544646bfd1c535a9654645609800901&t=search&q=game.
+#
+# NOTE: When the feed is fetched for the very first time all existing
+# items are ignored. The items found on subsequentional fetches are processed. 
+#Feed1.URL=
+
+# Filter rules for items.
+#
+# Use filter to ignore unwanted items in the feed. In its simplest version
+# the filter is a space separated list of words which must be present in
+# the item title.
+#
+# Example: linux debian dvd.
+#
+# MORE INFO:
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/RSS.
+#
+# Feed filter consists of rules - one rule per line. Each rule defines
+# a search string and a command, which must be performed if the search
+# string matches. There are five kinds of rule-commands: Accept,
+# Reject, Require, Options, Comment.
+#
+# NOTE: Since options in the configuration file can not span multiple
+# lines, the lines (rules) must be separated with %-character (percent).
+#
+# Definition of a rule:
+#  [A:|A(options):|R:|Q:|O(options):|#] search-string
+#
+#  A - declares Accept-rule. Rules are accept-rules by default, the
+#      "A:" can be imitted. If the feed item matches to the rule the
+#      item is considered good and no further rules are checked.
+#  R - declares Reject-rule. If the feed item matches to the rule the
+#      item is considered bad and no further rules are checked.
+#  Q - declares Require-rule. If the feed item DOES NOT match to the rule
+#      the item is considered bad and no further rules are checked.
+#  O - declares Options-rule. If the feed item matches to the rule the
+#      options declared in the rule are set for the item. The item is
+#      neither accepted nor rejected via this rule but can be accepted
+#      later by one of Accept-rules. In this case the item will have its
+#      options already set (unless the Accept-rule overrides them).
+#  # - lines starting with # are considered comments and are ignored. You
+#      can use comments to explain complex rules or to temporary disable
+#      rules for debugging.
+#
+# Options allow to set properties on nzb-file. It's a comma-separated
+# list of property names with their values.
+#
+# Definition of an option:
+#  name:value
+#
+# Options can be defined using long option names or short names:
+#  category (cat, c)    - set category name, value is a string;
+#  pause (p)            - add nzb in paused or unpaused state, possible
+#                         values are: yes (y), no (n);
+#  priority (pr, r)     - set priority, value is a signed integer number;
+#  priority+ (pr+, r+)  - increase priority, value is a signed integer number;
+#  dupescore (ds, s)    - set duplicate score, value is a signed integer number;
+#  dupescore+ (ds+, s+) - increase duplicate score, value is a signed integer number;
+#  dupekey (dk, k)      - set duplicate key, value is a string;
+#  dupekey+ (dk+, k+)   - add to duplicate key, value is a string;
+#  dupemode (dm, m)     - set duplicate check mode, possible values
+#                         are: score (s), all (a), force (f);
+#  rageid				- generate duplicate key using this rageid
+#                         (integer number) and season/episode numbers;
+#  series				- generate duplicate key using series identifier
+#                         (any unique string) and season/episode numbers.
+#
+# Examples of option definitions:
+#  Accept(category:my series, pause:yes, priority:100): my show 1080p;
+#  Options(c:my series, p:y, r:100): 1080p;
+#  Options(s:1000): 1080p;
+#  Options(k+:1080p): 1080p;
+#  Options(dupemode:force): BluRay.
+#
+# Rule-options override values set in feed-options.
+#
+# The search-string is similar to used in search engines. It consists of
+# search terms separated with spaces. Every term is checked for a feed
+# item and if they all succeed the rule is considered matching.
+#
+# Definition of a term:
+#  [+|-][field:][command]param
+#
+#  +       - declares a positive term. Terms are positive by default,
+#            the "+" can be omitted;
+#  -       - declares a negative term. If the term succeed the feed
+#            item is ignored;
+#  field   - field to which apply the term. If not specified
+#            the default field "title" is used;
+#  command - a special character defining how to interpret the
+#            parameter (followed after the command):
+#            @  - search for string "param". This is default command,
+#                 the "@" can be omitted;
+#            $  - "param" defines a regular expression (using POSIX Extended
+#                 Regular Expressions syntax);
+#            =  - equal;
+#            <  - less than;
+#            <= - equal or less than;
+#            >  - greater than;
+#            >= - equal or greater than;
+#  param   - parameter for command.
+#
+# Commands @ and $ are for use with text fields (title, filename, category,
+# link, genre, dupekey). Commands =, <, <=, > and >= are for use with numeric
+# fields (size, age, rating, imdbid, rageid, season, episode, priority,
+# dupescore).
+#
+# Only fields title, filename and age are always present. The availability of
+# other fields depend on rss feed provider.
+#
+# Text search (Command @) supports supports wildcard characters * (matches
+# any number of any characters), ? (matches any one character)
+# and # (matches one digit).
+# Text search is by default performed against words (word-search mode): the
+# field content is separated into words and then each word is checked
+# against pattern. If the search pattern starts and ends with * (star)
+# the search is performed against the whole field content
+# (substring-search mode). If the search pattern contains word separator
+# characters (except * and ?) the search is performed on the whole
+# field (the word-search would be obviously never successful in this
+# case). Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
+#
+# Field "size" can have suffixes "K" or "KB" for kilobytes, "M" or "MB"
+# for megabytes and "G" or "GB" for gigabytes. Field "age" can have
+# suffixes "m" for minutes, "h" for hours and "d" for days. If suffix
+# is not specified default is days. Field "rating" can be used with
+# integer or floating point parameter. Integer parameter is interpreted
+# as value of rating between 0 and 100. A floating point value is used
+# as rating between 0.0 and 10.0.
+#
+# Examples (the trailing ; or . is not part of filter):
+# 1) A: s01* -category:anime;
+# 2) my show WEB-DL;
+# 3) *my?show* WEB-DL size:<1.8GB age:>2h;
+# 4) R: size:>9GB;
+# 5) Q: HDTV.
+#
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/RSS.
+#Feed1.Filter=
+
+# How often to check for new items (minutes).
+#
+# Value "0" disables the automatic check of this feed.
+#Feed1.Interval=15
+
+# Add nzb-files as paused (yes, no).
+#Feed1.PauseNzb=no
+
+# Category for added nzb-files.
+#
+# NOTE: Feed providers may include category name within response when nzb-file
+# is downloaded. If you want to use the providers category leave the option empty.
+#Feed1.Category=
+
+# Priority for added nzb-files (number).
+#
+# Priority can be any integer value. The web-interface however operates
+# with only five predefined priorities: -100 (very low priority), -50
+# (low priority), 0 (normal priority, default), 50 (high priority),
+# 100 (very high priority).
+#Feed1.Priority=0
 
 
 ##############################################################################
@@ -730,227 +949,6 @@ UrlConnections=4
 # via URL or fetching of RSS feeds and nzb-files from feeds) are performed
 # even if download is in paused state.
 UrlForce=yes
-
-##############################################################################
-### CATEGORIES                                                             ###
-
-# This section defines categories available in web-interface.
-
-# Category name.
-#
-# Each nzb-file can be assigned to a category.
-# Category name is passed to post-processing script and can be used by it
-# to perform category specific processing.
-Category1.Name=Movies
-
-# Destination directory for this category.
-#
-# If this option is empty, then the default destination directory
-# (option <DestDir>) is used. In this case if the option <AppendCategoryDir>
-# is active, the program creates a subdirectory with category name within
-# destination directory.
-Category1.DestDir=
-
-# Unpack downloaded nzb-files (yes, no).
-#
-# For more information see global option <Unpack>.
-Category1.Unpack=yes
-
-# Default list of post-processing scripts.
-#
-# For more information see global option <DefScript>.
-Category1.DefScript=
-
-# List of aliases.
-#
-# When a nzb-file is added from URL, RSS or RPC the category name
-# is usually supplied by nzb-site or by application accessing
-# NZBGet. Using Aliases you can match their categories with your owns.
-#
-# Separate aliases with commas or semicolons. Use wildcard-characters
-# * and ? for pattern matching.
-#
-# Example: TV - HD, TV - SD, TV*
-Category1.Aliases=
-
-Category2.Name=Series
-Category3.Name=Music
-Category4.Name=Software
-
-
-##############################################################################
-### RSS FEEDS                                                              ###
-
-# Name of RSS Feed.
-#
-# The name is used in UI and for logging. It can be any string.
-#Feed1.Name=my feed
-
-# Address (URL) of RSS Feed.
-#
-# Example: https://myindexer.com/api?apikey=3544646bfd1c535a9654645609800901&t=search&q=game.
-#
-# NOTE: When the feed is fetched for the very first time all existing
-# items are ignored. The items found on subsequentional fetches are processed. 
-#Feed1.URL=
-
-# Filter rules for items.
-#
-# Use filter to ignore unwanted items in the feed. In its simplest version
-# the filter is a space separated list of words which must be present in
-# the item title.
-#
-# Example: linux debian dvd.
-#
-# MORE INFO:
-# NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/RSS.
-#
-# Feed filter consists of rules - one rule per line. Each rule defines
-# a search string and a command, which must be performed if the search
-# string matches. There are five kinds of rule-commands: Accept,
-# Reject, Require, Options, Comment.
-#
-# NOTE: Since options in the configuration file can not span multiple
-# lines, the lines (rules) must be separated with %-character (percent).
-#
-# Definition of a rule:
-#  [A:|A(options):|R:|Q:|O(options):|#] search-string
-#
-#  A - declares Accept-rule. Rules are accept-rules by default, the
-#      "A:" can be imitted. If the feed item matches to the rule the
-#      item is considered good and no further rules are checked.
-#  R - declares Reject-rule. If the feed item matches to the rule the
-#      item is considered bad and no further rules are checked.
-#  Q - declares Require-rule. If the feed item DOES NOT match to the rule
-#      the item is considered bad and no further rules are checked.
-#  O - declares Options-rule. If the feed item matches to the rule the
-#      options declared in the rule are set for the item. The item is
-#      neither accepted nor rejected via this rule but can be accepted
-#      later by one of Accept-rules. In this case the item will have its
-#      options already set (unless the Accept-rule overrides them).
-#  # - lines starting with # are considered comments and are ignored. You
-#      can use comments to explain complex rules or to temporary disable
-#      rules for debugging.
-#
-# Options allow to set properties on nzb-file. It's a comma-separated
-# list of property names with their values.
-#
-# Definition of an option:
-#  name:value
-#
-# Options can be defined using long option names or short names:
-#  category (cat, c)    - set category name, value is a string;
-#  pause (p)            - add nzb in paused or unpaused state, possible
-#                         values are: yes (y), no (n);
-#  priority (pr, r)     - set priority, value is a signed integer number;
-#  priority+ (pr+, r+)  - increase priority, value is a signed integer number;
-#  dupescore (ds, s)    - set duplicate score, value is a signed integer number;
-#  dupescore+ (ds+, s+) - increase duplicate score, value is a signed integer number;
-#  dupekey (dk, k)      - set duplicate key, value is a string;
-#  dupekey+ (dk+, k+)   - add to duplicate key, value is a string;
-#  dupemode (dm, m)     - set duplicate check mode, possible values
-#                         are: score (s), all (a), force (f);
-#  rageid				- generate duplicate key using this rageid
-#                         (integer number) and season/episode numbers;
-#  series				- generate duplicate key using series identifier
-#                         (any unique string) and season/episode numbers.
-#
-# Examples of option definitions:
-#  Accept(category:my series, pause:yes, priority:100): my show 1080p;
-#  Options(c:my series, p:y, r:100): 1080p;
-#  Options(s:1000): 1080p;
-#  Options(k+:1080p): 1080p;
-#  Options(dupemode:force): BluRay.
-#
-# Rule-options override values set in feed-options.
-#
-# The search-string is similar to used in search engines. It consists of
-# search terms separated with spaces. Every term is checked for a feed
-# item and if they all succeed the rule is considered matching.
-#
-# Definition of a term:
-#  [+|-][field:][command]param
-#
-#  +       - declares a positive term. Terms are positive by default,
-#            the "+" can be omitted;
-#  -       - declares a negative term. If the term succeed the feed
-#            item is ignored;
-#  field   - field to which apply the term. If not specified
-#            the default field "title" is used;
-#  command - a special character defining how to interpret the
-#            parameter (followed after the command):
-#            @  - search for string "param". This is default command,
-#                 the "@" can be omitted;
-#            $  - "param" defines a regular expression (using POSIX Extended
-#                 Regular Expressions syntax);
-#            =  - equal;
-#            <  - less than;
-#            <= - equal or less than;
-#            >  - greater than;
-#            >= - equal or greater than;
-#  param   - parameter for command.
-#
-# Commands @ and $ are for use with text fields (title, filename, category,
-# link, genre, dupekey). Commands =, <, <=, > and >= are for use with numeric
-# fields (size, age, rating, imdbid, rageid, season, episode, priority,
-# dupescore).
-#
-# Only fields title, filename and age are always present. The availability of
-# other fields depend on rss feed provider.
-#
-# Text search (Command @) supports supports wildcard characters * (matches
-# any number of any characters), ? (matches any one character)
-# and # (matches one digit).
-# Text search is by default performed against words (word-search mode): the
-# field content is separated into words and then each word is checked
-# against pattern. If the search pattern starts and ends with * (star)
-# the search is performed against the whole field content
-# (substring-search mode). If the search pattern contains word separator
-# characters (except * and ?) the search is performed on the whole
-# field (the word-search would be obviously never successful in this
-# case). Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
-#
-# Field "size" can have suffixes "K" or "KB" for kilobytes, "M" or "MB"
-# for megabytes and "G" or "GB" for gigabytes. Field "age" can have
-# suffixes "m" for minutes, "h" for hours and "d" for days. If suffix
-# is not specified default is days. Field "rating" can be used with
-# integer or floating point parameter. Integer parameter is interpreted
-# as value of rating between 0 and 100. A floating point value is used
-# as rating between 0.0 and 10.0.
-#
-# Examples (the trailing ; or . is not part of filter):
-# 1) A: s01* -category:anime;
-# 2) my show WEB-DL;
-# 3) *my?show* WEB-DL size:<1.8GB age:>2h;
-# 4) R: size:>9GB;
-# 5) Q: HDTV.
-#
-# NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/RSS.
-#Feed1.Filter=
-
-# How often to check for new items (minutes).
-#
-# Value "0" disables the automatic check of this feed.
-#Feed1.Interval=15
-
-# Add nzb-files as paused (yes, no).
-#Feed1.PauseNzb=no
-
-# Category for added nzb-files.
-#
-# NOTE: Feed providers may include category name within response when nzb-file
-# is downloaded. If you want to use the providers category leave the option empty.
-#Feed1.Category=
-
-# Priority for added nzb-files (number).
-#
-# Priority can be any integer value. The web-interface however operates
-# with only five predefined priorities: -100 (very low priority), -50
-# (low priority), 0 (normal priority, default), 50 (high priority),
-# 100 (very high priority).
-#Feed1.Priority=0
 
 
 ##############################################################################
