added new scheduler commands "ActivateServer" and "DeactivateServer"; combined options "TaskX.DownloadRate" and "TaskX.Process" into one option "TaskX.Param", also used by two new commands
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@903 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1063,47 +1063,47 @@ UpdateInterval=200
 # Examples: "1-7", "1-5", "5,6", "1-5, 7".
 #Task1.WeekDays=1-7
 
-# Command to be executed (DownloadRate, PauseDownload, UnpauseDownload, PauseScan,
-# UnpauseScan, Process).
+# Command to be executed ( PauseDownload, UnpauseDownload, PauseScan,
+# UnpauseScan, DownloadRate, Process, ActivateServer, DeactivateServer).
 #
 # Possible commands:
-#   DownloadRate    - sets download rate in KB/s;
-#   PauseDownload   - pauses download;
-#   UnpauseDownload - resumes download;
-#   PauseScan       - pauses scan of incoming nzb-directory;
-#   UnpauseScan     - resumes scan of incoming nzb-directory;
-#   Process         - executes external program.
-#Task1.Command=DownloadRate
+#   PauseDownload    - pauses download;
+#   UnpauseDownload  - resumes download;
+#   PauseScan        - pauses scan of incoming nzb-directory;
+#   UnpauseScan      - resumes scan of incoming nzb-directory;
+#   DownloadRate     - sets download rate limit;
+#   Process          - executes external program;
+#   ActivateServer   - activate news-server;
+#   DeactivateServer - deactivate news-server.
+#Task1.Command=PauseDownload
 
-# Download rate to be set if the command is "DownloadRate" (kilobytes/sec).
+# Parameters for the command if needed.
 #
-# Value "0" means no speed control.
-#
-# If the option <TaskX.Command> is not set to "DownloadRate" this option
-# is ignored and can be omitted.
-#Task1.DownloadRate=100
-
-# Path to the program to execute if the command is "Process".
-#
-# Example: /home/user/fetch-nzb.sh.
-#
-# If the option <TaskX.Command> is not set to "Process" this option
-# is ignored and can be omitted.
-#
-# NOTE: It's allowed to add parameters to command line. If filename or
-# any parameter contains spaces it must be surrounded with single quotation
-# marks. If filename/parameter contains single quotation marks, each of them
-# must be replaced with two single quotation marks and the resulting filename/
-# parameter must be surrounded with single quotation marks.
-# Example: '/home/user/download/my scripts/task process.sh' 'world''s fun'.
-# In this example one parameter (world's fun) is passed to the script
-# (task process.sh).
-#Task1.Process=/home/user/script.sh
+# Some scheduler commands require additional parameters:
+#  DownloadRate     - download rate limit to be set (kilobytes/sec).
+#                     Example: 1000;
+#  Process          - path to the program to execute and its parameters.
+#                     Example: /home/user/fetch.sh.
+#                     If filename or any parameter contains spaces it
+#                     must be surrounded with single quotation
+#                     marks. If filename/parameter contains single quotation marks,
+#                     each of them must be replaced with two single quotation 
+#                     marks and the resulting filename/parameter must be 
+#                     surrounded with single quotation marks.
+#                     Example: '/home/user/download/my scripts/task process.sh' 'world''s fun'.
+#                     In this example one parameter (world's fun) is passed
+#                     to the script (task process.sh).
+#  ActivateServer   - comma separated list of news server ids or server names.
+#                     Example: 1,3.
+#                     Example: my news server 1, my news server 2.
+#                     NOTE: server names should not have commas.
+#  DeactivateServer - see ActivateServer.
+#Task1.Param=
 
 #Task2.Time=20:00
 #Task2.WeekDays=1-7
-#Task2.Command=DownloadRate
-#Task2.DownloadRate=0
+#Task2.Command=UnpauseDownload
+#Task2.Param=
 
 
 ##############################################################################
