--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1341,6 +1341,8 @@ SevenZipCmd=7z
 #                           parameters or due to errors during par-check;
 #                       1 = unpack failed;
 #                       2 = unpack successful;
+#                       3 = write error (usually not enough disk space);
+#                       4 = wrong password (only for rar5 archives);
 #  NZBPP_HEALTHDELETED - indicates if nzb-file was deleted by health
 #                       check (1);
 #  NZBPP_TOTALARTICLES - number of articles in nzb-file;
