added scheduler command "FetchFeed"; renamed RPC-method "fetchfeeds" to "fetchfeed" and added parameter "ID"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@906 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1063,8 +1063,8 @@ UpdateInterval=200
 # Examples: "1-7", "1-5", "5,6", "1-5, 7".
 #Task1.WeekDays=1-7
 
-# Command to be executed ( PauseDownload, UnpauseDownload, PauseScan,
-# UnpauseScan, DownloadRate, Process, ActivateServer, DeactivateServer).
+# Command to be executed ( PauseDownload, UnpauseDownload, PauseScan, UnpauseScan,
+# DownloadRate, Process, ActivateServer, DeactivateServer, FetchFeed).
 #
 # Possible commands:
 #   PauseDownload    - pauses download;
@@ -1074,7 +1074,11 @@ UpdateInterval=200
 #   DownloadRate     - sets download rate limit;
 #   Process          - executes external program;
 #   ActivateServer   - activate news-server;
-#   DeactivateServer - deactivate news-server.
+#   DeactivateServer - deactivate news-server;
+#   FetchFeed        - fetch RSS feed.
+#
+# On start the program checks all tasks and determines current state
+# for download-pause, scan-pause, download-rate and active servers.
 #Task1.Command=PauseDownload
 
 # Parameters for the command if needed.
@@ -1098,6 +1102,11 @@ UpdateInterval=200
 #                     Example: my news server 1, my news server 2.
 #                     NOTE: server names should not have commas.
 #  DeactivateServer - see ActivateServer.
+#  FetchFeed        - comma separated list of RSS feed ids or feed names.
+#                     Example: 1,3.
+#                     Example: bookmarks feed, another feed.
+#                     NOTE: feed names should not have commas.
+#                     NOTE: use feed id "0" to fetch all feeds.
 #Task1.Param=
 
 #Task2.Time=20:00
