extended RSS filters: 1) added search field "description"; 2) any newznab attribute can now be used as search field with prefix "attr-" (for example "attr-genre"); 3) removed search fields "genre" and "rating" (use "attr-genre" and "attr-rating" instead
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@908 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -470,12 +470,15 @@ Category4.Name=Software
 #  param   - parameter for command.
 #
 # Commands @ and $ are for use with text fields (title, filename, category,
-# link, genre, dupekey). Commands =, <, <=, > and >= are for use with numeric
-# fields (size, age, rating, imdbid, rageid, season, episode, priority,
+# link, description, dupekey). Commands =, <, <=, > and >= are for use
+# with numeric fields (size, age, imdbid, rageid, season, episode, priority,
 # dupescore).
 #
 # Only fields title, filename and age are always present. The availability of
 # other fields depend on rss feed provider.
+#
+# Any newznab attribute (encoded as "newznab:attr" in the RSS feed) can
+# be used as search field with prefix "attr-", for example "attr-genre".
 #
 # Text search (Command @) supports supports wildcard characters * (matches
 # any number of any characters), ? (matches any one character)
@@ -492,10 +495,7 @@ Category4.Name=Software
 # Field "size" can have suffixes "K" or "KB" for kilobytes, "M" or "MB"
 # for megabytes and "G" or "GB" for gigabytes. Field "age" can have
 # suffixes "m" for minutes, "h" for hours and "d" for days. If suffix
-# is not specified default is days. Field "rating" can be used with
-# integer or floating point parameter. Integer parameter is interpreted
-# as value of rating between 0 and 100. A floating point value is used
-# as rating between 0.0 and 10.0.
+# is not specified default is days.
 #
 # Examples (the trailing ; or . is not part of filter):
 # 1) A: s01* -category:anime;
