added new option "TimeCorrection" to adjust conversion from system time to local local (solves issues with scheduler when using a binary compiled for other platform)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@914 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -996,6 +996,22 @@ CreateBrokenLog=yes
 # newsserver etc.
 DumpCore=no
 
+# Local time correction (hours or minutes).
+#
+# The option allows to adjust timestamps when converting system time to
+# local time and vice versa. The conversion is used when printing messages
+# to the log-file and by option "TaskX.Time" in the scheduler settings.
+#
+# The option is usually not needed if the time zone is set up correctly.
+# However, sometimes, especially when using a binary compiled on onother
+# platform (cross-compiling) the conversion between system and local time
+# may not work properly and requires adjustment.
+#
+# Values in the range -24..+24 are interpreted as hours, other values as minutes.
+#  Example 1: set time correction to one hour: TimeCorrection=1;
+#  Example 2: set time correction to one hour and a half: TimeCorrection=90.
+TimeCorrection=0
+
 # See also option <LogFile> in section "PATHS"
 
 
@@ -1052,6 +1068,8 @@ UpdateInterval=200
 # Asterix as hours-part means "every hour".
 #
 # Examples: "08:00", "00:00,06:00,12:00,18:00", "*:00", "*:00,*:30".
+#
+# NOTE: also see option <TimeCorrection>.
 #Task1.Time=08:00
 
 # Week days to execute the command (1-7).
