updated version string (preparing to release 12.0)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@929 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/configure.ac
+++ b/configure.ac
@@ -2,9 +2,9 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(nzbget, 12.0-testing, hugbug@users.sourceforge.net)
+AC_INIT(nzbget, 12.0, hugbug@users.sourceforge.net)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(nzbget, 12.0-testing)
+AM_INIT_AUTOMAKE(nzbget, 12.0)
 AC_CONFIG_SRCDIR([nzbget.cpp])
 AC_CONFIG_HEADERS([config.h])
 
